--- a/estudo/templates/nav.html
+++ b/estudo/templates/nav.html
@@ -1,7 +1,10 @@
 
+<div class="text-center">
 
 <a href="/" class="btn btn-dark">Home</a>
 
 <a href="{{url_for('about')}}" class="btn btn-primary">Contato</a>
 
 <a href="{{url_for('contatoLista')}}" class="btn btn-info">Contato-Lista</a>
+
+</div>
